# url_shortener

./: README.md  app.py  conftest.py  database.py  pyproject.toml
.github/workflows/: ci.yml  main_url-short.yml
static/: styles.css
templates/: index.html
tests/features/: environment.py  shorten_url.feature
tests/features/steps/: shorten_url_steps.py
tests/unit/: test_app.py  test_database.py
