[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Plamen Ivanov <paco.iwanow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.32"
validators = "^0.33.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
behave = "^1.2.6"
selenium = "^4.23.1"
webdriver-manager = "^4.0.2"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
