[tool.poetry]
name = "url-shortener"
version = "0.1.1"
description = "A sleek, modern URL shortener built with Python, Flask, and HTMX."
authors = ["Plamen Ivanov <paco.iwanow@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
sqlalchemy = "^2.0.32"
validators = "^0.33.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
behave = "^1.2.6"
black = "^24.8.0"
playwright = "^1.46.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
